--- a/web.config
+++ b/web.config
@@ -2,8 +2,17 @@
  
 <configuration>
     <system.webServer>
+
+         
+     <handlers>
+      <!-- Indicates that the server.js file is a node.js site to be handled by the iisnode module -->
+      <add name="iisnode" path="bin/www" verb="*" modules="iisnode"/>
+    </handlers>
+    
         <staticContent>
             <mimeMap fileExtension=".srt" mimeType="application/csv" />
      </staticContent>
+
+
     </system.webServer>
 </configuration> 
