--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-formidable": "~1.0.0",
+    "formidable": "latest",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "express-formidable": "~1.0.0",
-    "formidable": "latest"
+    "readline": "^1.3.0",
+    "zlib": "^1.0.5"
   }
 }
