--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "readline": "^1.3.0",
+    "request": "^2.88.2",
     "zlib": "^1.0.5"
   }
 }
