--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.0",
     "readline": "^1.3.0",
     "request": "^2.88.2",
-    "zlib": "^1.0.5"
+    "zlib": "^1.0.5",
+    "csv-parser": "latest"
   }
 }
