--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "csv-parser": "latest",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
@@ -20,7 +21,6 @@
     "morgan": "~1.9.0",
     "readline": "^1.3.0",
     "request": "^2.88.2",
-    "zlib": "^1.0.5",
-    "csv-parser": "latest"
+    "zlib": "^1.0.5"
   }
 }
