--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": "8.11.1"
+    "node": "16.13.0"
   },
   "scripts": {
     "start": "node ./bin/www"
@@ -16,7 +16,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-formidable": "~1.0.0",
-    "formidable": "latest",
+    "formidable": "1.2.1",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
